        - more tests.

5.682   2006-04-27 13:51:00
        - Damn OSX attributes again :( 

5.681   2006-04-27 08:47:00
        - Updated manifest.
        - Add basename to core . (Deprecates Catalyst::Plugin::Basename)
    
5.68    2006-04-26 12:23:00
        - ConfigLoader: Updated to version 0.06
        - fixed undef warnings in uri_for() and uri_with()

5.678   2006-04-24 12:30:00
        - Re-release of 5.67 without OSX metadata files.

5.67    2006-04-23 08:50:00
        - Added $c->req->uri_with() helper
        - ConfigLoader: Updated to version 0.05
        - Fix up Engine to avoid a new 5.8.8 warning
        - Added app name with :: support for PAR
        - Added $c->models/views/controllers
        - Static::Simple: Unescape the URI path before looking for the file.
          This fixes issues with files that have spaces.
        - Looping and recursion tests plus a fix
        - Added lots of API documentation. Refactored main pod.
        - Changed default behaviors for $c->model/$c->controller/$c->view
          to more sane settings.
        - added the clear_errors method - an alias for error(0)
        - Added tmpdir option for uploads (woremacx)
        - Applied patch from GEOFFR to allow normal filehandles.
        - Refactored Dispatcher internals for better readability and speedup
          (stress tests run 12% faster)
        - Allow $c->error to run as a class method

5.66    2006-03-10 17:48:00
        - Added Test::WWW::Mechanize::Catalyst support
        - Cleaned generated tests
        - Added Root controller concept
        - Updated ConfigLoader plugin to version 0.04

5.65    2006-02-21 10:34:00
        - Added plugin introspection.
        - Support optional hashref as last param for parameters in uri_for.
        - Updated tutorial to be more complete.
        - Applied args patch from antirice (Fixes Ticket #67)

5.64    2006-02-07 20:29:00
        - Fixed bug in FastCGI proc manager mode where pm_post_dispatch